--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -6,7 +6,7 @@ font-family: "Inter", sans-serif;
 /* Styles for button group */
 
 .btn-primary {
-    @apply flex items-center justify-center gap-2 rounded-md !bg-gray-600 px-3 py-[0.563rem] text-sm font-medium leading-5 text-white shadow-sm hover:!bg-gray-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2;
+    @apply flex items-center justify-center gap-2 rounded-md !bg-gray-600 dark:!bg-blue-500 px-3 py-[0.563rem] text-sm font-medium leading-5 text-white shadow-sm hover:!bg-gray-500 dark:hover:!bg-blue-400 transition-all focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2;
   }
   
   .btn-secondary {
@@ -50,20 +50,22 @@ font-family: "Inter", sans-serif;
 /* Styles for sidebar */
 
 .sidebarList {
-  @apply flex gap-x-3 rounded-md p-2 text-sm leading-6 font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-100 items-center;
+  @apply flex gap-x-3 rounded-md p-2 text-sm leading-6 font-medium text-gray-700 hover:text-gray-900 dark:text-white hover:bg-gray-100 dark:hover:bg-blue-500 items-center;
 }
 
 .sidebarListActive {
-  @apply flex gap-x-3 rounded-md p-2 text-sm leading-6 font-medium   text-gray-900 bg-gray-100;
+  @apply flex gap-x-3 rounded-md p-2 text-sm leading-6 font-medium   text-gray-900 bg-gray-100 dark:bg-blue-500;
 }
 
+
+.sidebarList svg path,
 .sidebarListActive svg path {
-  stroke: #6b7280 !important;
+  @apply !stroke-[#6b7280] dark:!stroke-white;
 }
   /* -------------- */
 
 .table_main {
-@apply border border-gray-200 border-solid rounded-[0.5rem] max-w-[100rem] w-full;
+@apply border border-gray-200 dark:border-blue-500 border-solid rounded-[0.5rem] max-w-[100rem] w-full;
 max-height: calc(100vh - 212px);
 }
 
@@ -72,7 +74,7 @@ max-height: calc(100vh - 212px);
 }
 
 .table_container thead tr th {
-@apply px-6 py-3.5 text-left font-medium text-gray-600 uppercase align-top text-xs;
+@apply px-6 py-3.5 text-left font-medium text-gray-600 dark:text-white dark:bg-blue-500 uppercase align-top text-xs;
 }
 
 .table_container .table-header__inner {
@@ -88,7 +90,7 @@ max-height: calc(100vh - 212px);
 }
 
 .table_container tbody tr td {
-@apply whitespace-nowrap px-6 py-4 text-sm text-gray-700 font-normal;
+@apply whitespace-nowrap px-6 py-4 text-sm text-gray-700 dark:text-white font-normal;
 }
 .table_container tbody tr td:first-child {
 @apply font-medium;
@@ -118,10 +120,10 @@ max-height: calc(100vh - 212px);
 
 /* input  */
 .form_label {
-  @apply block text-sm font-medium leading-5 text-blackolive;
+  @apply block text-sm font-medium leading-5 text-blackolive dark:text-white;
 }
 .form_input {
-  @apply block w-full pl-3 outline-none border rounded-md py-1.5 text-blackolive shadow-sm  placeholder:text-gray-400  sm:text-sm sm:leading-6;
+  @apply block w-full pl-3 outline-none border rounded-md py-1.5 text-blackolive dark:text-white shadow-sm  placeholder:text-gray-400 dark:bg-blue-500 sm:text-sm sm:leading-6;
 }
 
 /* form error CSS */
@@ -294,4 +296,37 @@ select:focus {
 /* cards styles  */
 .cards {
   @apply relative border-[4px] border-[#eee] p-2;
+}
+
+
+.user-select__control {
+  @apply dark:!bg-slate-800 dark:!border-blue-500;
+}
+
+.user-select__placeholder {
+  @apply dark:text-white;
+}
+
+.user-select__menu-list {
+  @apply dark:!bg-blue-500;
+}
+
+.user-select__single-value {
+  @apply dark:text-white;
+}
+
+.user-select__option {
+  @apply dark:text-white;
+}
+
+.user-select__option--is-focused {
+  @apply dark:!bg-blue-400;
+}
+
+.dark_light--icon svg path {
+  @apply dark:stroke-blue-400;
+}
+
+.back_button-arrow-left svg{
+  @apply dark:fill-white
 }
